force-app/main/default/objects/onemergefree__MergeResult__c/onemergefree__MergeResult__c.object-meta.xml
<CustomObject>
    <label>Merge Result</label>
    <nameField>
        <displayFormat>MRES{000000000}</displayFormat>
        <label>MergeResultNo</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Merge Results</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>