force-app/main/default/objects/onemergefree__MergeResult__c/fields/onemergefree__Account__c.field-meta.xml
<CustomField>
    <fullName>onemergefree__Account__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Parent Account record.</description>
    <inlineHelpText>Parent Account record.</inlineHelpText>
    <label>Account</label>
    <referenceTo>Account</referenceTo>
    <relationshipName>MergeResults</relationshipName>
    <type>Lookup</type>
</CustomField>