force-app/main/default/objects/onemergefree__MergeResult__c/fields/onemergefree__Case__c.field-meta.xml
<CustomField>
    <fullName>onemergefree__Case__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Parent Case record.</description>
    <inlineHelpText>Parent Case record.</inlineHelpText>
    <label>Case</label>
    <referenceTo>Case</referenceTo>
    <relationshipName>MergeResults</relationshipName>
    <type>Lookup</type>
</CustomField>