force-app/main/default/objects/onemergefree__MergeResult__c/fields/onemergefree__Contact__c.field-meta.xml
<CustomField>
    <fullName>onemergefree__Contact__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Parent Contact record.</description>
    <inlineHelpText>Parent Contact record.</inlineHelpText>
    <label>Contact</label>
    <referenceTo>Contact</referenceTo>
    <relationshipName>MergeResults</relationshipName>
    <type>Lookup</type>
</CustomField>