force-app/main/default/objects/onemergefree__MergeResult__c/fields/onemergefree__DuplicateRecordSetId__c.field-meta.xml
<CustomField>
    <fullName>onemergefree__DuplicateRecordSetId__c</fullName>
    <description>The related Duplicate Record Set Id.</description>
    <externalId>true</externalId>
    <inlineHelpText>The related Duplicate Record Set Id.</inlineHelpText>
    <label>Duplicate Record Set Id</label>
    <length>18</length>
    <type>Text</type>
</CustomField>