force-app/main/default/objects/onemergefree__MergeResult__c/fields/onemergefree__DuplicateRuleName__c.field-meta.xml
<CustomField>
    <fullName>onemergefree__DuplicateRuleName__c</fullName>
    <description>Duplicate Management Duplicate Rule Name.</description>
    <inlineHelpText>Duplicate Management Duplicate Rule Name.</inlineHelpText>
    <label>Duplicate Rule Name</label>
    <length>80</length>
    <type>Text</type>
</CustomField>