force-app/main/default/objects/onemergefree__MergeResult__c/fields/onemergefree__Lead__c.field-meta.xml
<CustomField>
    <fullName>onemergefree__Lead__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Parent Lead record.</description>
    <inlineHelpText>Parent Lead record.</inlineHelpText>
    <label>Lead</label>
    <referenceTo>Lead</referenceTo>
    <relationshipName>MergeResults</relationshipName>
    <type>Lookup</type>
</CustomField>