force-app/main/default/objects/onemergefree__MergeResult__c/fields/onemergefree__MergeOutputOverflow1__c.field-meta.xml
<CustomField>
    <fullName>onemergefree__MergeOutputOverflow1__c</fullName>
    <description>Merge Output as JSON data.</description>
    <inlineHelpText>Merge Output as JSON data.</inlineHelpText>
    <label>Merge Output Overflow 1</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>