force-app/main/default/objects/onemergefree__MergeResult__c/fields/onemergefree__MergeRulesetName__c.field-meta.xml
<CustomField>
    <fullName>onemergefree__MergeRulesetName__c</fullName>
    <description>Merge Ruleset Name.</description>
    <inlineHelpText>Merge Ruleset Name.</inlineHelpText>
    <label>Merge Ruleset</label>
    <length>80</length>
    <type>Text</type>
</CustomField>