force-app/main/default/objects/onemergefree__MergeResult__c/fields/onemergefree__ParentId__c.field-meta.xml
<CustomField>
    <fullName>onemergefree__ParentId__c</fullName>
    <description>Parent Id.</description>
    <inlineHelpText>Parent Id.</inlineHelpText>
    <label>Parent Id</label>
    <length>18</length>
    <type>Text</type>
</CustomField>