force-app/main/default/objects/onemergefree__MergeResult__c/fields/onemergefree__RecordCount__c.field-meta.xml
<CustomField>
    <fullName>onemergefree__RecordCount__c</fullName>
    <description>Number of Duplicate Records merged.</description>
    <inlineHelpText>Number of Duplicate Records merged.</inlineHelpText>
    <label>Record Count</label>
    <precision>5</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>