force-app/main/default/objects/onemergefree__MergeResult__c/listViews/onemergefree__All.listView-meta.xml
<ListView>
    <fullName>onemergefree__All</fullName>
    <columns>NAME</columns>
    <columns>CREATEDBY_USER</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>